[gd_scene format=3 uid="uid://wksbunf5ytle"]

[ext_resource type="Script" uid="uid://bds6f4dvea0ns" path="res://Scripts/bub.gd" id="1_drsmb"]
[ext_resource type="Texture2D" uid="uid://y6qvuw6xglso" path="res://Assets/Mobs/Spikey Bub/Hurt (16 x 16).png" id="2_drsmb"]
[ext_resource type="Texture2D" uid="uid://cgqv457b4kqns" path="res://Assets/Mobs/Spikey Bub/Running (16 x 16).png" id="3_5jm0k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_drsmb"]
atlas = ExtResource("2_drsmb")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jm0k"]
atlas = ExtResource("3_5jm0k")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ragq"]
atlas = ExtResource("3_5jm0k")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fvgq"]
atlas = ExtResource("3_5jm0k")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_50alo"]
atlas = ExtResource("3_5jm0k")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds04w"]
atlas = ExtResource("3_5jm0k")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7al1"]
atlas = ExtResource("3_5jm0k")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6j750"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_drsmb")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jm0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ragq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fvgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50alo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds04w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7al1")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j1om3"]
size = Vector2(10, 7)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_drsmb"]
radius = 6.0
height = 14.0

[node name="BubSpikey" type="CharacterBody2D" unique_id=1670272699 groups=["enemy_body"]]
collision_layer = 16
script = ExtResource("1_drsmb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1048508538]
position = Vector2(0, 0.2)
sprite_frames = SubResource("SpriteFrames_6j750")
animation = &"walk"
autoplay = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=866672575]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_j1om3")

[node name="HitBox" type="Area2D" parent="." unique_id=1615748848 groups=["enemy_hitbox"]]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" unique_id=1609527229]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_drsmb")
debug_color = Color(1, 0, 0, 0.39215687)

[node name="WallDetector" type="RayCast2D" parent="." unique_id=893558415]
position = Vector2(0, 3)
target_position = Vector2(-11, 0)

[node name="GroundDetector" type="RayCast2D" parent="." unique_id=2006968891]
position = Vector2(-10, 3)
target_position = Vector2(0, 7)
